[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelComponents/UI.gd" type="Script" id=1]
[ext_resource path="res://LevelComponents/ui/rewind.png" type="Texture" id=2]
[ext_resource path="res://Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://LevelComponents/ui/pause.png" type="Texture" id=4]
[ext_resource path="res://Fonts/rainyhearts.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://LevelComponents/ui/ui_bg.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_right = 60.0
margin_bottom = 24.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 23.0
custom_constants/separation = 10
alignment = 1

[node name="Redo" type="TextureButton" parent="Control/ColorRect/HBoxContainer"]
margin_left = 1.0
margin_right = 17.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )

[node name="Timer" type="Label" parent="Control/ColorRect/HBoxContainer"]
margin_left = 27.0
margin_right = 84.5
margin_bottom = 19.0
rect_min_size = Vector2( 57.5, 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1:10"
align = 1
valign = 1

[node name="Pause" type="TextureButton" parent="Control/ColorRect/HBoxContainer"]
margin_left = 94.0
margin_right = 110.0
margin_bottom = 20.0
texture_normal = ExtResource( 4 )

[node name="Options" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Control/ColorRect/HBoxContainer/Redo" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ColorRect/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
